--- a/gb/9/6/27/n2571805.md
+++ b/gb/9/6/27/n2571805.md
@@ -1,56 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onivku3167/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>漫谈“中和”(上)</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/shutterstock_756180220-320x200.jpg" />
 <h6></h6>
 <hr>
 <p>现代医学越来越认识到人体摄入过多的盐分和糖分都对健康不利，其实中国古老的中医学早就认识到甜酸苦辣咸这五味中任何一种味道摄入过量都会对人体健康造成不利影响。中医学发源于道家的阴阳五行学说，认为健康取决于人体中的阴阳与五行是否达到平衡，所有的疾病都是阴阳与五行失衡所造成的。而嗜好五味中的某几种味道，长此以往就会造成人体中的某些物质摄取过量，破坏五行之间的平衡，从而导致疾病。</p>
 <p>和西医不同，中医很早就认识到人的身心是一体的。中医有“七情”之说，即以喜、怒、忧、思、悲、恐、惊为七情。中医经典《黄帝内经》指出：怒伤肝、喜伤心、思伤脾、忧伤肺、恐伤肾。《灵枢》又云：“喜乐不节则伤藏，藏伤则病起于阴”。在中医看来，没有一颗健康的心，就不会有一个健康的身体。</p>
 <p>中国传统的儒家经典《中庸》有云：“喜怒哀乐之未发，谓之中；发而皆中节，谓之和。”对此，宋代大儒朱熹注释道：“喜怒哀乐，情也。其未发，则性也。无所偏倚，故谓之中。发之中节，情之正也。无所乖戾，故谓之和。”</p>
-<p>大家知道化学里有“<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E4%B8%AD%E5%92%8C.md">中和</a>”一说，就是从这里来的。PH值为7时正好是中性，越往上碱性越强，越往下酸性越强。所谓的“中和”，就是让酸性物质和碱性物质“对冲”，从而达到中性，也就是既不呈酸性，又不呈碱性。 </p>
+<p>大家知道化学里有“<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E4%B8%AD%E5%92%8C.md#1">中和</a>”一说，就是从这里来的。PH值为7时正好是中性，越往上碱性越强，越往下酸性越强。所谓的“中和”，就是让酸性物质和碱性物质“对冲”，从而达到中性，也就是既不呈酸性，又不呈碱性。 </p>
 <p>《中庸》所讲的也是这个道理，精神的喜怒哀乐就相当于物质的酸甜苦辣，相当于化学中的酸性和碱性。当人的内心淡泊宁静，没有喜怒哀乐的时候，就相当于没有酸甜苦辣的平淡，也相当于没有酸性或碱性的中性。这就叫做“中”。</p>
 <p>而当人的内心呈现出喜怒哀乐，却又加以节制的时候，就相当于产生了淡淡的酸甜苦辣的味道，或相当于呈现出弱酸性或弱碱性。这就叫做“和”。</p>
-<p>那么儒家为什么要提倡<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E4%B8%AD%E5%92%8C.md">中和</a>呢？《中庸》是这么说的，“中也者，天下之大本也；和也者，天下之达道也。”对此朱熹注释道：“大本者，天命之性，天下之理皆由此出，道之体也。达道者，循性之谓，天下古今之所共由，道之用也。” </p>
+<p>那么儒家为什么要提倡<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E4%B8%AD%E5%92%8C.md#1">中和</a>呢？《中庸》是这么说的，“中也者，天下之大本也；和也者，天下之达道也。”对此朱熹注释道：“大本者，天命之性，天下之理皆由此出，道之体也。达道者，循性之谓，天下古今之所共由，道之用也。” </p>
 <p>先解释一下中国古代哲学中的“体”和“用”这两个概念。以水为例，水本身是“体”，我们用水来浇灌庄稼，那就是“用”。在中国古代哲学中，“体”是第一性的，而“用”是第二性的，是根据“体”所具备的某种特性来加以运用，从而达到特定的目地。还是那个水的例子，之所以用水来浇灌庄稼，是因为生命起源于水，水具有润泽万物、维系生命之功效。(待续)@</p>
 <p><font color=#ffffff>(http://www.dajiyuan.com)</font></p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/9/6/27/n2571805.htm">漫谈“中和”(上)</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877185.htm">芬兰3只小熊站成一圈跳舞 如童话般画面</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/21/n2565212.md#1">学习中华文化 把根留住</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/22/n2565928.md#1">漫谈“杏斑癣”与“桃花癣”</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/22/n2566085.md#1">房仲：换屋北市最爱大安区 北县最爱中和市?</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/24/n2568558.md#1">【算术漫谈】六十四卦方图与加法（1）</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/24/n2568568.md#1">【算术漫谈】六十四卦方图与加法（2）</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/24/n2568574.md#1">【算术漫谈】六十四卦方图与加法（3）</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/27/n2571714.md#1">【算术漫谈】洛书旋机与全息结构</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/9/6/27/n2571793.md#1">漫谈精神和物质的关系</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/9/6/27/n2571805.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234376.md#1" target="_blank">【征文】文宇：科举千年兴衰录（二）</a></li><li><a href="https://github.com/onivku3167/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/11/27/n12580489.md#1">太学生不识朱元璋 吟诗一首登仕途</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12626810.md#1">【直播预告】挺川灭共站出来 台北游行集会</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623326.md#1">【罗厨寻味】红烧牛腩</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12628980.md#1">【远见快评 】国家情报总监报告推迟 谁在阻挡？</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623396.md#1">【新闻看点】拜登当选？川普意想不到“反转”</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623847.md#1">【新闻大家谈】美国会首次听证 贺锦丽尴尬</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624296.md#1">店员妹仔破涕为笑 误开400万的发票找到了</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623272.md#1">曾遭散打冠军老婆家暴 陆男星台上演哭章子怡</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623537.md#1">疑向中共下跪 梁朝伟漫威角色“满大人”改名</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625572.md#1">遭小粉红无谓攻击 香港歌手关淑怡发长文怒怼</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625818.md#1">疑染疫身亡的李偲嫣 曾任张国荣歌迷会会长</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623055.md#1">范冰冰首谈与李晨分手原因：不想牵连他</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/7/n12600078.md#1">厕所异味有原因！3个清洁妙方除臭又去污垢</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走眼前小黑点</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624214.md#1">iPhone 6s手机从飞机坠地没坏 拍下整个过程</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624416.md#1">311大地震被海啸冲走 日本渔船10年后现身</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12622560.md#1">家里常备10种中药 抗发炎、护肠胃好处说不完</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/6/27/n2571805.htm">漫谈“中和”(上)</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/onivku3167/djy/blob/master/gb/9/6/27/n2571805.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
