--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -24,11 +24,11 @@
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1" target="_blank">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/IMG_0496-1214-health11-150x120.jpg" align ="left"></a>越南女子阮黄鸳26岁出家，在她成为尼姑的一年后，罹患了胃癌，癌细胞已扩散，走路都非常痛苦。她暂时离开寺院，四处寻医问药，但均药石罔效。绝望之际，有人推荐她炼法轮功，她决定一试。头一个月修炼，她的疼痛就减轻了，还看到一块一块的肿瘤从子宫流出体外。到了第六个月，阮黄鸳已不再服用任何药物，她的身体彻底痊愈了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 2:27 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12620147.md#1" target="_blank">摇玲珑（一四四）</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12620147.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/ac9f2ef178cf7c6f6eac917ab02feedd-150x120.jpg" align ="left"></a>危难来时思虎贲， 神鹰有志荡层云。 非常举措非常季， 不世英雄不世勋。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12619976.md#1" target="_blank">青松絮语：远行者的背影</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12619976.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/01/nature-2058243_1920-150x120.jpg" align ="left"></a>所有远行的人，注定要经历艰辛，但劳苦并不可怕。只要心中目标坚定，即使靠走，也能一步步接近目的地。远行者的背影，是最美的风景……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月14日 11:12 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627919.md#1" target="_blank">台湾古典诗：通霄虎首昂啸</a><br></h3>虎屿豋临气势豪，苍茫一片逐风涛， 雄威昂首山君啸，巨浪腾空海若号；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月18日 12:08 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627970.md#1" target="_blank">摇玲珑（一四六）</a><br></h3>卫国情怀永奉神，
 临危更显志忠纯。
 怀贞早已无私念，
-蹈义从来不顾身。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月18日 12:05 AM			</td></tr>
+蹈义从来不顾身。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月18日 8:07 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627919.md#1" target="_blank">台湾古典诗：通霄虎首昂啸</a><br></h3>虎屿豋临气势豪，苍茫一片逐风涛， 雄威昂首山君啸，巨浪腾空海若号；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月18日 12:08 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625261.md#1" target="_blank">更漏子．正义盈川普胜</a><br></h3> 正邪分，真相现，美大选神魔战。 红祸乱，世人囹，拜登随恶生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月17日 12:14 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12622869.md#1" target="_blank">渔家傲．天意</a><br></h3> 大选夺权人舞弊， 水池搅动沉渣起。 暴力谎言当武器。 仍窃喜， 自娱自乐宣更替。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月17日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12622891.md#1" target="_blank">新诗：白水木影舞</a><br></h3>午后，阳光斜觑白墙上 一群美丽的天鹅轻踮着脚尖，悄悄 溜进了雪白的舞池......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月16日 12:52 AM			</td></tr>
