--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628200.md#1" title="纳瓦罗发报告揭选举违规六层面：完美欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1215227588-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628197.md#1" title="【一线采访】大连疫情再起 小区被封业主叫苦""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/13-4-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://onivku3167.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629915.md#1">乔州州务卿：将在全州抽样检查邮寄选票签名</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627841.md#1">职场管理小故事：为善不欲人知的长官</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629915.md#1">乔州州务卿：将在全州抽样检查邮寄选票签名</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627841.md#1">职场管理小故事：为善不欲人知的长官</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629684.md#1">大陆疫苗备受质疑 中共官员表态引议论</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629689.md#1">太缺芯了 大陆28纳米以下芯片企业免税十年</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629777.md#1">组图：美东遭遇暴风雪 纽约人雪中取乐</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12628994.md#1">蔡英文声援黎智英 批港共对民主自由戕害</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629689.md#1">太缺芯了 大陆28纳米以下芯片企业免税十年</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629777.md#1">组图：美东遭遇暴风雪 纽约人雪中取乐</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12628994.md#1">蔡英文声援黎智英 批港共对民主自由戕害</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624493.md#1">【大选更新12·16】参院听证：内华达13万欺诈案</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,556,551 人
+!共 369,558,945 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
