--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -27,7 +27,7 @@
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12621404.md#1" target="_blank">美国男子濒死目睹自己的葬礼 没人看到他</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12621404.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2014/08/140827211030985-150x120.jpg" align ="left"></a>一名自称汤玛斯（Thomas）的美国男子表示，他在手术房因停止呼吸而经历了濒死体验。他在“死亡”期间看到亲人在他的葬礼上哭泣，但他们都看不到他。在被告知时辰未到之后，他返回了人世间。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 1:25 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/11/30/n12585408.md#1" target="_blank">【成吉思汗】征高加索与南俄 建四大汗国</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/11/30/n12585408.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/c736e3bbf3e57408155068fcb9c4ba51-150x120.jpg" align ="left"></a>1222年九月，成吉思汗渡阿姆河，在撒马尔罕城东下营，十月下诏回师，被俘获的长长的商队走在蒙古大军前，朝着布哈拉前进。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 3:57 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1" target="_blank">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/IMG_0496-1214-health11-150x120.jpg" align ="left"></a>越南女子阮黄鸳26岁出家，在她成为尼姑的一年后，罹患了胃癌，癌细胞已扩散，走路都非常痛苦。她暂时离开寺院，四处寻医问药，但均药石罔效。绝望之际，有人推荐她炼法轮功，她决定一试。头一个月修炼，她的疼痛就减轻了，还看到一块一块的肿瘤从子宫流出体外。到了第六个月，阮黄鸳已不再服用任何药物，她的身体彻底痊愈了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 2:27 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12620147.md#1" target="_blank">摇玲珑（一四四）</a><br></h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12620147.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/ac9f2ef178cf7c6f6eac917ab02feedd-150x120.jpg" align ="left"></a>危难来时思虎贲， 神鹰有志荡层云。 非常举措非常季， 不世英雄不世勋。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月15日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630473.md#1" target="_blank">新诗：致“神选之子”川普</a><br></h3>那是一条沧桑的路 充满艰辛 那是一双不能停歇的脚 踏着坚毅 那是一个高大的身躯 刚直挺拓......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月19日 12:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627970.md#1" target="_blank">摇玲珑（一四六）</a><br></h3>卫国情怀永奉神，
 临危更显志忠纯。
 怀贞早已无私念，
